refactor: implemented immutable toList() instead Collector.toList() for repo collecting in stream